tests/NormalTests/paczka1/fuzzy1/12923219.err
Error in line 1: A275 A514 37,9
Error in line 12: UqL1 A625 42,2
Error in line 18: A275 S433 86,8
Error in line 27: bDJ7DknN8 S433 81,1
Error in line 14: yAxat06Kq A275 68,6
Error in line 29: yAxat06Kq S433 62,0
